Fix circular images stretched on small screens

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -244,7 +244,9 @@ section {
 	}
 
 	@media screen and (max-width: $bp-sm) {
+		height: 275px;
 		margin: 0 auto;
+		width: 275px;
 	}
 }
 
